package orbb;

import "orbb_metadata.proto";

service InferenceService {
    rpc process (DetectionRequest) returns (Metadata) {}
}

// Request message containg the images path
message DetectionRequest {
    required string images_path = 1;
}
